Add missed alias to Apache configuration

--- a/ccstats.conf
+++ b/ccstats.conf
@@ -1,3 +1,4 @@
+Alias /ccstats /usr/share/ccstats
 <Directory "/usr/share/ccstats">
         AddDefaultCharset UTF-8
         php_value magic_quotes_gpc off
